# avs-device-sdk

ApplicationUtilities/: CMakeLists.txt
